--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
@@ -28,7 +29,8 @@
                     <div class="player-current-score" id="current-1">0</div>
                 </div>
             </div>
-
+            <input type="text" placeholder="Enter Player name" class="new-player"> 
+            <input type="submit" class="new-player-submit">
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Draw Card</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
