removed  audio track play is available if added to file

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -29,7 +29,7 @@
                     <div class="player-current-score" id="current-1">0</div>
                 </div>
             </div>
-            <input type="text" placeholder="Enter Player name" class="new-player"> 
+            <input type="text" placeholder="Enter Player name" class="new-player">
             <input type="submit" class="new-player-submit">
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Draw Card</button>
@@ -42,6 +42,10 @@
 
         </div>
 
-
+        <audio controls class="player">
+        <audio autoplay>
+          <source src="witcher.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
     </body>
 </html>
