--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -42,10 +42,10 @@
 
         </div>
 
-        <audio controls class="player">
+        <!-- <audio controls class="player">
         <audio autoplay>
           <source src="witcher.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-        </audio>
+        </audio> -->
     </body>
 </html>
