begin addition of calculation vairables

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -6,7 +6,8 @@
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="style.css">
                 <script src="app.js" async></script>
-        <title>Pig Game</title>
+                <script src="classes.js" async></script>
+        <title>Toss a coin to your Witcher</title>
     </head>
 
     <body>
