--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -5,8 +5,18 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="style.css">
-                <script src="app.js" async></script>
+
+                <script src="game.js" async></script>
                 <script src="classes.js" async></script>
+                <!-- <script src="newPlayer.js" async></script>
+                <script src="newGame.js" async></script>
+                <script src="roll.js" async></script>
+                <script src="hold.js" async></script>
+                <script src="app.js" async></script>
+                <script src="nextPlayer.js" async></script>
+                <script src="classes.js" async></script> -->
+
+
         <title>Toss a coin to your Witcher</title>
     </head>
 
@@ -15,16 +25,16 @@
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
-                <div class="player-score" id="score-0">43</div>
+                <div class="player-score" id="score-0">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Current</div>
-                    <div class="player-current-score" id="current-0">11</div>
+                    <div class="player-current-score" id="current-0">0</div>
                 </div>
             </div>
 
             <div class="player-1-panel">
                 <div class="player-name" id="name-1">Player 2</div>
-                <div class="player-score" id="score-1">72</div>
+                <div class="player-score" id="score-1">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Current</div>
                     <div class="player-current-score" id="current-1">0</div>
@@ -38,7 +48,7 @@
 
             <input type="text" placeholder="Final Score (Default 100)" class="final-score">
 
-            <img src="dice-5.png" alt="Dice" class="dice" id="dice">
+            <img src="other-graveyard.png" alt="Dice" class="dice" id="dice">
 
 
         </div>
