game works updated dice to gifs names change default cards ajstble score

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -49,6 +49,7 @@
             <input type="text" placeholder="Final Score (Default 100)" class="final-score">
 
             <img src="other-graveyard.png" alt="Dice" class="dice" id="dice">
+            <img alt="Dice" class="dice-DOm" id="dice-num">
 
 
         </div>
