--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -42,9 +42,9 @@
             </div>
             <input type="text" placeholder="Enter Player name" class="new-player">
             <input type="submit" class="new-player-submit">
-            <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
-            <button class="btn-roll"><i class="ion-ios-loop"></i>Draw Card</button>
-            <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
+            <button class="btn-new"><i class="ion-ios-play"></i>New game</button>
+            <button class="btn-roll"><i class="ion-ios-loop-strong"></i>Draw Card</button>
+            <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button>
 
             <input type="text" placeholder="Final Score (Default 100)" class="final-score">
 
