--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -8,6 +8,7 @@
 
                 <script src="game.js" async></script>
                 <script src="classes.js" async></script>
+                <script src="index.js" async></script>
                 <!-- <script src="newPlayer.js" async></script>
                 <script src="newGame.js" async></script>
                 <script src="roll.js" async></script>
