--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -60,5 +60,32 @@
           <source src="witcher.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio> -->
+
+
+<table class="table-stats" cellspacing="10">
+<h3 class="ion-information-circled" name="trending-up"> Stats for Nerds </ion-icon > </h3>
+  <tr>
+    <!-- <th>total draws this game</th>
+    <th>Double six draw count</th>
+    <th>total draws this turn</th> -->
+  </tr>
+  <tr>
+    <td id="stat-1">total card draws this game</td>
+    <td id=""stat-2"">total draws this turn</td>
+    <td id="stat-3">average draw pper turn</td>
+  </tr>
+  <tr>
+    <td id="stat-4">Double six draw count</td>
+    <td id="stat-5">total draw of the 1 card</td>
+    <td id="stat-6">total turns taken</td>
+  </tr>
+  <tr>
+    <td id="stat-7">average turns before hold</td>
+    <td id="stat-8">average points before hold</td>
+    <td id="stat-9">highest point streak</td>
+  </tr>
+
+</table>
+
     </body>
 </html>
