stats worrking add stat menu button

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -62,8 +62,10 @@
         </audio> -->
 
 
-<table class="table-stats" cellspacing="10">
-<h3 class="ion-information-circled" name="trending-up"> Stats for Nerds </ion-icon > </h3>
+<table class="table-stats" cellspacing="22" cellpadding="10" style="table-layout:fixed">
+
+<button class="info-btn"><i class="ion-information-circled"></i>  Stats for Nerds </button>
+  <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button>
   <tr>
     <!-- <th>total draws this game</th>
     <th>Double six draw count</th>
@@ -71,7 +73,7 @@
   </tr>
   <tr>
     <td id="stat-1">total card draws this game</td>
-    <td id=""stat-2"">total draws this turn</td>
+    <td id="stat-2">total draws this turn</td>
     <td id="stat-3">average draw pper turn</td>
   </tr>
   <tr>
@@ -80,7 +82,7 @@
     <td id="stat-6">total turns taken</td>
   </tr>
   <tr>
-    <td id="stat-7">average turns before hold</td>
+    <td id="stat-7">average draws before hold</td>
     <td id="stat-8">average points before hold</td>
     <td id="stat-9">highest point streak</td>
   </tr>
