menu on off complete

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -62,10 +62,10 @@
         </audio> -->
 
 
-<table class="table-stats" cellspacing="22" cellpadding="10" style="table-layout:fixed">
+<table class="table-stats" cellspacing="20" cellpadding="5" >
 
-<button class="info-btn"><i class="ion-information-circled"></i>  Stats for Nerds </button>
-  <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button>
+<button type="button" class="info-btn" ><i class="ion-information-circled"></i> Stats for Nerds </button>
+  <!-- <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button> -->
   <tr>
     <!-- <th>total draws this game</th>
     <th>Double six draw count</th>
