--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -62,7 +62,7 @@
         </audio> -->
 
 
-<table class="table-stats" cellspacing="20" cellpadding="5" >
+<table class="table-stats" cellspacing="10">
 
 <button type="button" class="info-btn" ><i class="ion-information-circled"></i> Stats for Nerds </button>
   <!-- <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button> -->
