--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -24,8 +24,10 @@
     <body>
 
         <div class="wrapper clearfix">
+
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
+                
                 <div class="player-score" id="score-0">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Current</div>
@@ -34,16 +36,22 @@
             </div>
 
             <div class="player-1-panel">
+<!-- <img src="dice/yennifer.png" alt="yennifer" class="yennifer"> -->
                 <div class="player-name" id="name-1">Player 2</div>
                 <div class="player-score" id="score-1">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Current</div>
                     <div class="player-current-score" id="current-1">0</div>
+
                 </div>
             </div>
+
+
             <input type="text" placeholder="Enter Player name" class="new-player">
             <input type="submit" class="new-player-submit">
-            <button class="btn-new"><i class="ion-ios-play"></i>New game</button>
+            <button class="btn-new"><image src="dice/cdpr.png" class="bird" ></image></i>New game</button>
+
+            <!-- <input type="image"class="bird"> -->
             <button class="btn-roll"><i class="ion-ios-loop-strong"></i>Draw Card</button>
             <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button>
 
@@ -62,7 +70,7 @@
         </audio> -->
 
 
-<table class="table-stats" cellspacing="10">
+<table class="table-stats" cellspacing="5">
 
 <button type="button" class="info-btn" ><i class="ion-information-circled"></i> Stats for Nerds </button>
   <!-- <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button> -->
