objects now update with additional atrtibutes

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -6,7 +6,7 @@
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="style.css">
 
-                <script src="game.js" async></script>
+                <script src="gameClone.js" async></script>
                 <script src="classes.js" async></script>
                 <script src="index.js" async></script>
                 <!-- <script src="newPlayer.js" async></script>
@@ -27,7 +27,7 @@
 
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
-                
+
                 <div class="player-score" id="score-0">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Current</div>
