--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -8,14 +8,6 @@
 
                 <script src="gameClone.js" async></script>
                 <script src="classes.js" async></script>
-                <script src="index.js" async></script>
-                <!-- <script src="newPlayer.js" async></script>
-                <script src="newGame.js" async></script>
-                <script src="roll.js" async></script>
-                <script src="hold.js" async></script>
-                <script src="app.js" async></script>
-                <script src="nextPlayer.js" async></script>
-                <script src="classes.js" async></script> -->
 
 
         <title>Toss a coin to your Witcher</title>
@@ -36,7 +28,7 @@
             </div>
 
             <div class="player-1-panel">
-<!-- <img src="dice/yennifer.png" alt="yennifer" class="yennifer"> -->
+
                 <div class="player-name" id="name-1">Player 2</div>
                 <div class="player-score" id="score-1">0</div>
                 <div class="player-current-box">
@@ -51,34 +43,23 @@
             <input type="submit" class="new-player-submit">
             <button class="btn-new"><image src="dice/cdpr.png" class="bird" ></image></i>New game</button>
 
-            <!-- <input type="image"class="bird"> -->
             <button class="btn-roll"><i class="ion-ios-loop-strong"></i>Draw Card</button>
             <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button>
 
             <input type="text" placeholder="Final Score (Default 100)" class="final-score">
 
-            <img src="other-graveyard.png" alt="Dice" class="dice" id="dice">
+            <img src="dice/other-graveyard.png" alt="Dice" class="dice" id="dice">
             <img alt="Dice" class="dice-DOm" id="dice-num">
 
 
         </div>
 
-        <!-- <audio controls class="player">
-        <audio autoplay>
-          <source src="witcher.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-        </audio> -->
-
 
 <table class="table-stats" cellspacing="5">
 
 <button type="button" class="info-btn" ><i class="ion-information-circled"></i> Stats for Nerds </button>
-  <!-- <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button> -->
-  <tr>
-    <!-- <th>total draws this game</th>
-    <th>Double six draw count</th>
-    <th>total draws this turn</th> -->
-  </tr>
+
+
   <tr>
     <td id="stat-1">total card draws this game</td>
     <td id="stat-2">total draws this turn</td>
