diabled input fields on game start

--- a/JS-FRONTEND/frontEnd/index.html
+++ b/JS-FRONTEND/frontEnd/index.html
@@ -18,7 +18,7 @@
         <div class="wrapper clearfix">
 
             <div class="player-0-panel active">
-                <div class="player-name" id="name-0">Player 1</div>
+                <div class="player1-name" id="name-0">Player 1</div>
 
                 <div class="player-score" id="score-0">0</div>
                 <div class="player-current-box">
@@ -29,7 +29,7 @@
 
             <div class="player-1-panel">
 
-                <div class="player-name" id="name-1">Player 2</div>
+                <div class="player2-name" id="name-1">Player 2</div>
                 <div class="player-score" id="score-1">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Current</div>
@@ -39,14 +39,14 @@
             </div>
 
 
-            <input type="text" placeholder="Enter Player name" class="new-player">
+            <input type="text" placeholder="Enter Player name" class="new-player" id="name-input">
             <input type="submit" class="new-player-submit">
             <button class="btn-new"><image src="dice/cdpr.png" class="bird" ></image></i>New game</button>
 
             <button class="btn-roll"><i class="ion-ios-loop-strong"></i>Draw Card</button>
             <button class="btn-hold"><i class="ion-ios-pulse-strong"></i>Hold</button>
 
-            <input type="text" placeholder="Final Score (Default 100)" class="final-score">
+            <input type="text" placeholder="Final Score (Default 100)" class="final-score" id="100d">
 
             <img src="dice/other-graveyard.png" alt="Dice" class="dice" id="dice">
             <img alt="Dice" class="dice-DOm" id="dice-num">
